Added tablet response.

--- a/index.html
+++ b/index.html
@@ -28,21 +28,28 @@
 <!--Navigation bar-->
       <nav>
         <div class="container">
-          <ul>
-            <li>Eyewear</li>
-            <li>Apparel</li>
-            <li>Gadgets</li>
-            <li>Vehicles</li>
-            <li>Classes</li>
-            <li>Contact</li>
-          </ul>
+          <div class="desktop-nav">
+            <ul>
+              <li>Eyewear</li>
+              <li>Apparel</li>
+              <li>Gadgets</li>
+              <li>Vehicles</li>
+              <li>Classes</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+          <div class="mobile-nav">
+            <ul>
+              <li>Menu</li>
+            </ul>
+          </div>
         </div>
       </nav>
 
 <!--Main content section-->
       <div class="container">
         <div class="products-section">
-          <div class="item">
+          <div class="item" id="pen">
             <div class="img">
               <img src="./resources/images/pen.png" />
             </div>
@@ -50,7 +57,7 @@
               <p>Exploding Pen</p>
             </div>
           </div>
-          <div class="item">
+          <div class="item" id="watch">
             <div class="img">
               <img src="./resources/images/watch.png" />
             </div>
@@ -58,7 +65,7 @@
               <p>Cellular Watch</p>
             </div>
           </div>
-          <div class="item">
+          <div class="item" id="glasses">
             <div class="img">
               <img src="./resources/images/glasses.png" />
             </div>
